Adding new icon plugin

--- a/wp-content/plugins/ghostkit/languages/ghostkit.json
+++ b/wp-content/plugins/ghostkit/languages/ghostkit.json
@@ -86,6 +86,9 @@
          "Default": [
             ""
          ],
+         "Every %d Minutes": [
+            ""
+         ],
          "Default Fonts Site": [
             ""
          ],
