--- a/wp-content/plugins/ghostkit/languages/ghostkit.pot
+++ b/wp-content/plugins/ghostkit/languages/ghostkit.pot
@@ -2,14 +2,14 @@
 # This file is distributed under the GPLv2 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: Ghost Kit 2.19.0\n"
+"Project-Id-Version: Ghost Kit 2.19.1\n"
 "Report-Msgid-Bugs-To: https://github.com/nk-o/ghostkit/issues\n"
 "Last-Translator: nK\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2021-04-01T18:32:47+00:00\n"
+"POT-Creation-Date: 2021-04-03T11:02:18+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "X-Generator: WP-CLI 2.4.0\n"
 "X-Domain: ghostkit\n"
@@ -136,6 +136,11 @@ msgstr ""
 #: gutenberg/components/typography/index.js:85
 #: gutenberg/extend/display/index.js:60
 msgid "Default"
+msgstr ""
+
+#. translators: %d - Interval.
+#: classes/class-breakpoints-background.php:100
+msgid "Every %d Minutes"
 msgstr ""
 
 #: classes/class-fonts.php:297
